# webServer

./: CMakeLists.txt  README.txt  client.cpp  hpts.cpp  record  server.cpp
.VSCodeCounter/2024-02-17_15-01-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
config/: httpbaseconfig.ini  socketbaseconfig.ini
src/: CMakeLists.txt  temp
src/HttpBase/: Bridge.cpp  CMakeLists.txt  HttpController.cpp  HttpHandler.cpp  ReadBuffer.cpp  RequestHandler.cpp  ResponseHandler.cpp  WriteBuffer.cpp
src/HttpBase/include/: Bridge.h  HttpController.h  HttpHandler.h  ReadBuffer.h  RequestHandler.h  ResponseHandler.h  WriteBuffer.h
src/SockBase/: Acceptor.cpp  CMakeLists.txt  Connection.cpp  HeapTimer.cpp  Reactor.cpp  Server.cpp  Socket.cpp  SocketHandler.cpp  ThreadPool.cpp  util.cpp
src/SockBase/include/: Acceptor.h  Connection.h  HeapTimer.h  Reactor.h  Server.h  Socket.h  SocketHandler.h  ThreadPool.h  util.h
static/pages/: 400.html  403.html  404.html  error.html  index.html
temp/: Queue.h
